deployments/dashboard/dashboard-service-lb.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8443
